--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -3,8 +3,7 @@
         @apply py-2 leading-6 border-4 border-transparent whitespace-nowrap transition-colors duration-100;
         @apply relative inline-block px-6 font-bold text-gray-600 text-center uppercase rounded-full;
 
-        &:hover,
-        &:focus {
+        &:hover {
             @apply text-black;
         }
 
@@ -13,30 +12,26 @@
         }
     }
 
-    .button-primary {
+    .button-prose,
+    .button-blue {
         @apply text-white bg-blue-500 border-blue-500;
 
-        &:hover,
-        &:focus {
-            @apply text-white;
-            border-color: color-mod(theme("colors.blue.500") shade(20%));
-            background-color: color-mod(theme("colors.blue.500") shade(20%));
+        &:hover {
+            @apply text-blue-500 bg-transparent border-blue-500;
         }
     }
 
     .button-white {
         @apply text-black bg-white border-white;
 
-        &:hover,
-        &:focus {
+        &:hover {
             @apply text-white bg-gray-800 border-gray-800;
         }
 
         &.button-outline {
             @apply text-white bg-transparent;
 
-            &:hover,
-            &:focus {
+            &:hover {
                 @apply text-gray-800 bg-white border-white;
             }
         }
