--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -12,7 +12,7 @@
     }
 
     .navbar-logo {
-        @apply relative z-50 mr-8 py-4 text-3xl text-white;
+        @apply relative z-50 mr-8 py-4 text-3xl;
         max-width: 33.3333%;
     }
 
@@ -28,27 +28,21 @@
             @apply ml-8;
 
             & .navbar-link {
-                @apply button button-primary;
-
-                &:hover,
-                &:focus {
-                    @apply text-white;
-                }
+                @apply button button-blue;
             }
         }
     }
 
     .navbar-link {
-        @apply block w-full px-4 py-2 text-sm text-white tracking-wide font-bold uppercase cursor-pointer whitespace-nowrap transition-colors duration-100;
+        @apply block w-full px-4 py-2 text-sm tracking-wide font-bold uppercase cursor-pointer whitespace-nowrap transition-colors duration-100;
 
-        &:hover,
-        &:focus {
+        &:hover {
             @apply text-blue-500;
         }
     }
 
     .navbar-toggle {
-        @apply relative z-40 block text-white cursor-pointer;
+        @apply relative z-40 block cursor-pointer;
         @apply lg:hidden;
 
         & span {
