--- a/templates/modules/_topBar.twig
+++ b/templates/modules/_topBar.twig
@@ -1,7 +1,7 @@
-<div class="hidden lg:block bg-gray-900 text-sm text-white">
+{# <div class="hidden lg:block bg-zinc-900 text-sm text-white">
     <div class="py-2">
         <div class="container container-lg">
 
         </div>
     </div>
-</div>
+</div> #}
