--- a/templates/modules/blocks/_imageContent.twig
+++ b/templates/modules/blocks/_imageContent.twig
@@ -1,31 +1,28 @@
-<section class="relative overflow-hidden {{ background.class }}">
+{% import 'helpers/_macros.twig' as macros %}
+
+<section class="relative {{ background.class }}">
     <div class="py-12 md:py-24">
         <div class="container container-lg">
-            <div class="flex flex-col -m-12 items-center {{ block.isFlipped ? 'md:flex-row-reverse' : 'md:flex-row' }}">
-                <div class="flex md:w-1/2 p-12">
+            <div class="flex flex-col -m-6 items-center {{ block.isFlipped ? 'md:flex-row-reverse' : 'md:flex-row' }}">
+                <div class="flex md:w-1/2 p-6">
                     <div class="relative">
-                        {% if block.featuredImage.one %}
-                            <img class="w-full"
-                                data-src="{{ block.featuredImage.one.url }}"
-                                alt="">
-                        {% else %}
-                            <img class="w-full"
-                                data-src="https://placem.at/things?w=600&h=600&txt=0&random=1"
-                                alt="">
-                        {% endif %}
+                        {{ macros.image(block.featuredImage.one, {
+                            auto: 'format,compress',
+                            fit: 'crop',
+                            width: 600,
+                            height: 600
+                        }) }}
                     </div>
                 </div>
-                <div class="md:w-1/2 p-12">
-                    <h2 class="text-6xl leading-none mb-8">
+                <div class="md:w-1/2 p-6">
+                    <h2 class="text-5xl leading-none mb-8">
                         {{ block.heading|striptags('<strong><span><br>')|trim|raw }}
                     </h2>
-                    <div class="wysiwyg wysiwyg-user">
+                    <div class="prose">
                         {{ block.body }}
-                        {% if not block.button.isEmpty %}
-                            {{ block.button.link({
-                                class: 'button button-primary'
-                            }) }}
-                        {% endif %}
+                        {{ macros.link(block.button, {
+                            class: 'button button-blue'
+                        }, 'p') }}
                     </div>
                 </div>
             </div>
