--- a/templates/helpers/_blocks.twig
+++ b/templates/helpers/_blocks.twig
@@ -1,7 +1,19 @@
-{% for block in entry.blocks.level(1).all %}
-    {% set background = block.background
-        ? block.background.color|first
-        : { color: '#FFF', class: 'bg-white' } %}
+{% set blocks = entry.blocks.level(1).all %}
+{% set defaultBackground = { color: '#FFF', class: 'bg-white' } %}
+
+{% for block in blocks %}
+    {% set nextBlock = blocks[loop.index]|default(null) %}
+    {% set background = block.background|default({ color: [] })
+        .color|first|default(defaultBackground) %}
+    {% set nextBackground = nextBlock.background|default({ color: [] })
+        .color|first|default(defaultBackground) %}
+
+    {% if not nextBlock %}
+        {% set nextBackground = { class: null } %}
+    {% endif %}
+
+    {% set isAdjacent = background.class == nextBackground.class %}
+    {% set padding = isAdjacent ? 'pt-12 md:pt-24' : 'py-12 md:py-24' %}
 
     {% include 'modules/blocks/_' ~ block.type.handle ignore missing %}
 {% endfor %}
