--- a/templates/modules/blocks/_imageContent.twig
+++ b/templates/modules/blocks/_imageContent.twig
@@ -1,7 +1,7 @@
 {% import 'helpers/_macros.twig' as macros %}
 
 <section class="relative {{ background.class }}">
-    <div class="py-12 md:py-24">
+    <div class="{{ padding }}">
         <div class="container container-lg">
             <div class="flex flex-col -m-6 items-center {{ block.isFlipped ? 'md:flex-row-reverse' : 'md:flex-row' }}">
                 <div class="flex md:w-1/2 p-6">
