--- a/templates/modules/blocks/_video.twig
+++ b/templates/modules/blocks/_video.twig
@@ -2,7 +2,7 @@
 
 {% if embed|length %}
     <section class="relative {{ background.class }}">
-        <div class="py-8 md:py-16">
+        <div class="{{ padding }}">
             <div class="container container-sm">
                 <div class="video">
                     <iframe src="{{ embed }}?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0"></iframe>
