--- a/templates/modules/blocks/_wysiwyg.twig
+++ b/templates/modules/blocks/_wysiwyg.twig
@@ -2,7 +2,7 @@
 {% set replace = 'srcset="$1?auto=compress,format&width=848, $1?auto=compress,format&width=1696 2x"' %}
 
 <section class="relative {{ background.class }}">
-    <div class="py-8 md:py-16">
+    <div class="{{ padding }}">
         <div class="container container-sm">
             <div class="prose">
                 {% apply replace(getenv('AWS_CLOUDFRONT_URL'), getenv('IMGIX_URL'))|raw %}
