--- a/templates/_error.twig
+++ b/templates/_error.twig
@@ -1,6 +1,7 @@
 {% set entry = craft.entries
     .slug(craft.app.response.statusCode)
     .section('error')
+    .status(null)
     .one %}
 
 {% if entry %}
