--- a/templates/_error.twig
+++ b/templates/_error.twig
@@ -5,7 +5,7 @@
     .one %}
 
 {% if entry %}
-    {% include 'pages/_index' %}
+    {% include 'entries/_index' %}
 {% else %}
     <p>{{ craft.app.response.statusCode }}</p>
 {% endif %}
