--- a/templates/modules/_header.twig
+++ b/templates/modules/_header.twig
@@ -6,7 +6,7 @@
     ? block.heading
     : entry.title %}
 
-<section class="relative" role="banner">
+<section class="relative">
     <div class="relative grid items-center bg-gradient-to-br from-zinc-900 to-zinc-700 bg-center bg-cover">
         <div class="relative py-12 md:py-24">
             <div class="container text-white">
