--- a/templates/modules/_footer.twig
+++ b/templates/modules/_footer.twig
@@ -1,14 +1,20 @@
+{% import 'helpers/_macros.twig' as macros %}
+
+{% set legalItems = legal.menu.all %}
+
 <div class="py-2">
     <div class="container text-center">
         <div class="text-sm tracking-wider">
             <span class="block sm:inline">&copy; {{ now|date('Y') }} {{ systemName }}</span>
+            {% if legalItems|length %}
+                <span class="hidden sm:inline">|</span>
+                <menu class="inline-flex flex-wrap gap-2">
+                    {% for item in legalItems %}
+                        {{ macros.link(item.button, {}, 'li') }}
+                    {% endfor %}
+                </menu>
+            {% endif %}
             <span class="hidden sm:inline">|</span>
-            {% if not footer.privacyPolicy.isEmpty %}
-                {{ footer.privacyPolicy.link }} |
-            {% endif %}
-            {% if not footer.termsOfUse.isEmpty %}
-                {{ footer.termsOfUse.link }} <span class="hidden sm:inline">|</span>
-            {% endif %}
             <span class="block sm:inline">Site by <a href="https://www.mostlyserious.io" target="_blank">Mostly Serious</a></span>
         </div>
     </div>
