--- a/templates/layouts/_base.twig
+++ b/templates/layouts/_base.twig
@@ -98,7 +98,7 @@
         {% endblock %}
     </footer>
 
-    {% include '_cp/frontEndShortcut' %}
+    {{ include('cp/_frontEndEditLink.twig', ignore_missing=true)  }}
 
     {{ codeBlocks|filter(c => c.position == 'bodyBottom')|map(c => c.code)|join('\n\n')|raw }}
 </body>
